fix: loading background on firefox

--- a/src/viewer/styles.styl
+++ b/src/viewer/styles.styl
@@ -103,6 +103,8 @@
         flex-direction column
         justify-content center
         align-items center
+        background    embedurl('./assets/spinner.svg') center center no-repeat
+        background-size 7rem
 
     h2
         max-width   90%
@@ -144,6 +146,10 @@
         margin      0 auto
         width       10rem
         height      8.75rem
+
+.pho-viewer-pdfviewer .pho-viewer-noviewer
+    background charcoalGrey
+    height 100%
 
 .pho-viewer-canceled
     &:before
